--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
+
 :root {
 	--cell-size: 100px;
 
 	--color: #81c3fd; /* for hover */
 	--color-set: #0275d8; /* when set */
-	--: 10px; /* X line-width */
+	--l: 10px; /* X line-width */
 }
-
 body {
 	margin: 0;
 }
@@ -19,99 +19,4 @@ body {
 	justify-items: center;
 	align-items: center;
 	grid-template-columns: repeat(3, auto)
-}
-
-.cell {
-	width: 100px;
-	height: 100px;
-	border: 1px solid black;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	position: relative;
-	cursor: pointer;
-}
-
-/* remove border for edges */
-.cell:nth-child(1), .cell:nth-child(2), .cell:nth-child(3) {
-	border-top: none;
-}
-
-.cell:nth-child(1), .cell:nth-child(4), .cell:nth-child(7) {
-	border-left: none;
-}
-
-.cell:nth-child(3), .cell:nth-child(6), .cell:nth-child(9) {
-	border-right: none;
-}
-
-.cell:nth-child(7), .cell:nth-child(8), .cell:nth-child(9) {
-	border-bottom: none;
-}
-
-.cell.x, .cell.circle {
-	cursor: not-allowed;
-}
-
-
-.board.x .cell:not(.circle):not(.x):hover {
-	background: linear-gradient(to top right, transparent calc(50% ) / 2, calc(50%) / 2) calc(50% / 2), transparent calc(50%  / 2),
-				linear-gradient(to bottom right, transparent calc(50%) / 2), calc(50%  / 2) calc(50%  / 2), transparent calc(50% + var(--l) / 2);
-	background-size: 80% 80%;
-	background-repeat: no-repeat;
-	background-position: center;
-}
-
-/* for cross (set) */
-.cell:not(.circle).x {
-	background: linear-gradient(to top right, transparent calc(50%  / 2),  calc(50%  / 2) calc(50%  / 2), transparent calc(50%  / 2)),
-				linear-gradient(to bottom right, transparent calc(50% / 2),) calc(50%  / 2) calc(50% / 2), transparent calc(50% + var(--l) / 2);
-	background-size: 80% 80%;
-	background-repeat: no-repeat;
-	background-position: center;
-}
-
-/* for circle */
-.board.circle .cell:not(.circle):not(.x):hover {	
-	background: radial-gradient(60%), transparent (60%);
-}
-
-/* for circle (set) */
-.cell:not(.x).circle {
-	background: radial-gradient 60%, transparent 60%;
-}
-
-.winning-message {
-	display: none;
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background-color: peru;
-	justify-content: center;
-	align-items: center;
-	color: white;
-	font-size: 5rem;
-	font-family: 'Courier New', Courier, monospace;
-	flex-direction: column;
-}
-
-.winning-message button {
-	border-radius: 10px;
-	font-size: 3rem;
-	background-color: lightpink;
-	border: 1px solid ;
-	padding: .25em .5em;
-	cursor: pointer;
-}
-
-.winning-message button:hover {
-	background-color: 
-	color: rgb(233, 20, 20);
-	border-color: white;
-}
-
-.winning-message.show {
-	display: flex;
 }
